# deckwatch

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Making an AI app.md  README.md
.github/workflows/: ci.yml  publish.yml
docs/: AI_DIAGNOSTICS.md  AI_SAFETY.md  APPLICATIONS.md  ARCHITECTURE.md  ARCHITECTURE_DECISION.md  AUTH.md  DEPLOYMENTS.md  GETTING_STARTED.md  GITOPS.md  GITOPS_USER_GUIDE.md  INGRESS.md  LOGS_AND_DEBUGGING.md  MCP.md  METRICS.md  METRICS_VISUALIZATION.md  MULTI_CLUSTER.md  PROMETHEUS_INTEGRATION.md  REGISTRY.md  ROLLBACK.md  S3_REGISTRY.md  SETTINGS.md  STATEFULSET.md  TEMPLATES.md  TESTING.md  TRACING.md  VALIDATING_WEBHOOKS.md
docs/book/: book.toml
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/e2e/: README.md  deployment-detail.spec.ts  deployments-crud.spec.ts  error-states.spec.ts  fixtures.ts  namespace.spec.ts  navigation.spec.ts
frontend/src/: App.vue  main.ts
openapi/: openapi.yaml
scripts/: build-docs.sh
src/: README_INTEGRATION.md  anthropic.rs  audit.rs  auth.rs  auto_rollback.rs  config.rs  config_tests.rs  crypto.rs  db.rs  db_tests.rs  error.rs  error_tests.rs  handlers_addons_tests.rs  handlers_admission_tests.rs  handlers_ai_fix_tests.rs  handlers_applications_tests.rs  handlers_autoscaling_tests.rs  handlers_deployments_tests.rs  handlers_deployments_ux_tests.rs  handlers_diagnostics_tests.rs  handlers_git_provider_tests.rs  handlers_gitops_tests.rs  handlers_ingresses_tests.rs  handlers_mcp_tests.rs  handlers_monitoring_tests.rs  handlers_preview_tests.rs  handlers_prometheus_query_tests.rs  handlers_promote_tests.rs  handlers_s3_backend_tests.rs  handlers_templates_tests.rs  handlers_tracing_handler_tests.rs  handlers_webhooks_tests.rs  integration_tests.rs  kube_ext.rs  kube_ext_tests.rs  license.rs  license_middleware.rs  log_sanitize.rs  main.rs  metrics.rs  (+10 more)
(+203 files in other folders)
