[package]
name = "deckwatch"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "sync", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip", "trace"] }

kube = { version = "4", features = ["ws"] }
k8s-openapi = { version = "0.28", features = ["v1_32"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

thiserror = "2"
futures = "0.3"
tokio-stream = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

clap = { version = "4", features = ["derive", "env"] }
jiff = "0.2"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
anyhow = "1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
jsonwebtoken = "9"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
hmac = "0.12"
subtle = "2"
async-trait = "0.1"

# Cloud-agnostic object storage trait — S3 backend for the embedded OCI
# registry. See docs/S3_REGISTRY.md for the rationale; the `aws` feature
# pulls in the standard AWS credential chain (env, IMDS, IRSA).
object_store = { version = "0.11", features = ["aws"] }
bytes = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rcgen = "0.13"
time = "0.3"

# Database layer — SeaORM supports SQLite / PostgreSQL / MySQL from a single
# codebase. runtime-tokio-rustls matches our existing tokio + rustls stack.
sea-orm = { version = "1", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "1" }

[dev-dependencies]
rand = "0.8"
tempfile = "3"
